--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "@types/pg": "^8.15.5",
     "aws-cdk": "2.1016.0",
     "esbuild": "^0.25.8",
     "jest": "^29.7.0",
@@ -21,7 +22,10 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.152",
     "aws-cdk-lib": "2.195.0",
-    "constructs": "^10.0.0"
+    "aws-sdk": "^2.1692.0",
+    "constructs": "^10.0.0",
+    "pg": "^8.16.3"
   }
 }
